@@ -63,6 +63,7 @@ boost_suffixes = $(if $(boost_suffixes_$(1)), $(boost_suffixes_$(1)),"")
 # Input: library, suffix
 # Return: base library filename for short or full name
 mk_base_name = usr/lib/$(DEB_HOST_MULTIARCH)/libboost_$(subst -,_,$(1))$(2)
+mk_cmake_name = usr/lib/$(DEB_HOST_MULTIARCH)/cmake/boost_$(subst -,_,$(1))-$(SOVERSION)/
 
 # Input: component
 # Return: package name for shared library or development
@@ -81,12 +82,13 @@ mk_deb_dev = debian/$(call mk_pkg_dev,$(1))
 mk_so_files = $(shell echo debian/tmp/$(call mk_base_name,$(2),$(3)).so.$(SOVERSION) >> $(call mk_deb_lib,$(1)).install)
 mk_a_files = $(shell echo debian/tmp/$(call mk_base_name,$(2),$(3)).a >> $(call mk_deb_dev,$(1)).install)
 mk_ln_files = $(shell echo $(call mk_base_name,$(2),$(3)).so.$(SOVERSION) $(call mk_base_name,$(2),$(3)).so >> $(call mk_deb_dev,$(1)).links)
+mk_cmake_files = $(shell echo debian/tmp/$(call mk_cmake_name,$(2),$(3)) >> $(call mk_deb_dev,$(1)).install)
 
 # Specify the type of files/links to install.
 # Special cases first, then general rule
-boost_filetypes_exception = a
-boost_filetypes_test_exec_monitor = a
-boost_filetypes = $(if $(boost_filetypes_$(1)), $(boost_filetypes_$(1)),a so ln)
+boost_filetypes_exception = a cmake
+boost_filetypes_test_exec_monitor = a cmake
+boost_filetypes = $(if $(boost_filetypes_$(1)), $(boost_filetypes_$(1)),a so ln cmake)
 
 # Function that updates debhelper files for a given library
 # Input: component, library, suffix
@@ -366,6 +368,7 @@ clean-debhelper:
 make-debhelper: clean-debhelper $(filtered_files)
 	@$(call mk_debhelper_files)
 	@$(call cp_debhelper,libboost-dev,libboost$(PKGVERSION)-dev)
+	@echo usr/lib/$(DEB_HOST_MULTIARCH)/cmake/Boost*-$(SOVERSION)* >> debian/libboost$(PKGVERSION)-dev.install
 	@$(call cp_debhelper,libboost-doc,libboost$(PKGVERSION)-doc)
 	@$(call cp_debhelper,libboost-python-dev,libboost-python$(PKGVERSION)-dev)
 	@$(call cp_debhelper,libboost-mpi-python-dev,libboost-mpi-python$(PKGVERSION)-dev)
